fix z-index again

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -36,7 +36,7 @@ body {
 }
 
 .q-drawer {
-	z-index: 6007;
+	z-index: 10;
 	background: $bgMain;
 	.noti {
 		background: #f8f8f6;
@@ -44,6 +44,7 @@ body {
 	.rd {
 		padding: 1rem;
 		box-shadow: -1px 0 3px rgba(0, 0, 0, 0.3);
+		z-index: 6007;
 		&.speech {
 			background: $blue-grey-10;
 		}
